src/objects/Related_Zip_Postal_Code__c.object
<CustomObject>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Related Zip/Postal Codes</relationshipLabel>
        <relationshipName>Related_Zip_Postal_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Synced_D_T__c</fullName>
        <label>Last Synced D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_D_T__c</fullName>
        <label>Last Updated D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_State_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related State/Province</label>
        <referenceTo>Related_State_Province__c</referenceTo>
        <relationshipLabel>Related Zip/Postal Codes</relationshipLabel>
        <relationshipName>Related_Zip_Postal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>TEXT(Zip_Postal_Code__r.Time_Zone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_District_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Zip/District Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <referenceTo>Zip_Postal_Code__c</referenceTo>
        <relationshipLabel>Related Zip/Postal Codes</relationshipLabel>
        <relationshipName>Related_Zip_Postal_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Related Zip/Postal Code</label>
    <nameField>
        <displayFormat>RZ-{000000}</displayFormat>
        <label>Related Zip/Postal Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Zip/Postal Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Add_Zip_to_District_Using_States</fullName>
        <active>true</active>
        <errorConditionFormula>District__r.Num_Related_State_Provinces__c &gt; 0</errorConditionFormula>
        <errorMessage>Cannot add a Related Zip/Postal Code to a District that is using Related States/Provinces.</errorMessage>
    </validationRules>
</CustomObject>